Fix z-index issue in hero.

--- a/css/christopherdeane.webflow.css
+++ b/css/christopherdeane.webflow.css
@@ -1023,6 +1023,7 @@ label {
   bottom: 0%;
   left: 0%;
   right: 0%;
+  z-index: 0;
 }
 
 .hero-page-list {
@@ -1561,6 +1562,7 @@ label {
 
   .hero-content {
     max-width: 75%;
+    z-index: 1;
   }
 
   .scale-image.image-scroll {
